# MCRCON

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  addserverdialog.cpp  addserverdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  servermanagedialog.cpp  servermanagedialog.h  servermanager.cpp  servermanager.h  servermanager.ui
AddServerDialog/: addserverdialog.h  addserverdialog.ui
LocalServerManager/: localservermanager.cpp  localservermanager.h  localservermanager.ui
Logger/: Logger.h
MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
PythonModule/: pythonmodule.cpp  pythonmodule.h
ServerManagerDialog/: servermanagedialog.cpp  servermanagedialog.h  servermanagedialog.ui
include/: definitions.h
